--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "jsnext:main": "src/index.js",
   "scripts": {
     "clean": "rimraf lib dist",
-    "test": "mocha --compilers js:babel/register spec",
+    "test": "mocha --compilers js:babel-core/register spec",
     "lint": "eslint src spec",
     "check": "npm run lint && npm run test",
     "build:lib": "babel src --out-dir lib",
@@ -38,14 +38,16 @@
   },
   "homepage": "https://github.com/uken/delayed-do",
   "devDependencies": {
-    "babel": "^5.8.23",
-    "babel-core": "^5.8.25",
-    "babel-loader": "^5.3.2",
-    "eslint": "^1.7.1",
+    "babel-cli": "^6.1.4",
+    "babel-core": "^6.1.4",
+    "babel-loader": "^6.1.0",
+    "babel-preset-es2015": "^6.1.4",
+    "babel-preset-react": "^6.1.4",
+    "eslint": "^1.9.0",
     "expect": "^1.12.2",
-    "mocha": "^2.2.4",
+    "mocha": "^2.3.3",
     "rimraf": "^2.4.3",
-    "webpack": "^1.12.2"
+    "webpack": "^1.12.4"
   },
   "npmName": "delayed-do",
   "npmFileMap": [
